--- a/63mf_adaptive/style.css
+++ b/63mf_adaptive/style.css
@@ -33,7 +33,7 @@ html, body{
     margin: 0;
 }
 
-h1, h2, h3, h4, h5, h6, p{
+h1, h2, h3, h4, h5, h6, p, ul{
     margin: 0;
 }
 a{
@@ -51,7 +51,8 @@ ul{
     height: 100%;
     position: relative;
     min-height: 581px;
-    background-image: url("./img/background.jpg");
+    background-image: url("./img/background-img.jpg");
+    background-position: 77%, 0;
     background-size: cover;
     background-repeat: no-repeat;
 }
@@ -61,6 +62,9 @@ ul{
     display: flex;
     align-items: center;
     height: 70px;
+}
+.landing__inner .landing__header.hide-element{
+    display: none;
 }
 .landing__header .landing__header__item{
     width: 33.3%;
@@ -97,7 +101,9 @@ ul{
 .landing__header .landing__header__gender .male__symbol{
     top:3px;
 }
-
+.landing__reg-container .landing__reg-form .progress-bar{
+    margin-bottom: 20px;
+}
 .progress-bar .progress-item{
     width: 10px;
     height: 10px;
@@ -163,8 +169,8 @@ ul{
 .landing__reg-container{
     display: block;
     position: absolute;
-    width: 390px;
-    height: 390px;
+    width: 410px;
+    height: 410px;
     border-radius: 50%;
     top: 50%;
     left: 50%;
@@ -185,7 +191,7 @@ ul{
     display: block;
 }
 .landing__reg-container .landing__reg-form{
-    width: 310px;
+    width: 330px;
     height: 390px;
     font-family: Lora;
     position: relative;
@@ -200,6 +206,7 @@ ul{
     text-transform: uppercase;
 }
 .landing__reg-container .landing__step__text{
+    margin-top: 10px;
     margin-bottom: 10px;
 }
 .landing__step__subtext{
@@ -207,7 +214,7 @@ ul{
 }
 .landing__reg-container .landing__reg__select{
     position: relative;
-    margin-bottom: 10px;
+    margin-bottom: 12px;
 }
 .landing__reg-container .landing__reg__select.open .landing__selector-selected{
     border-radius: 18.5px 18.5px 0 0;
@@ -292,7 +299,7 @@ ul{
     -webkit-background-clip: padding-box;
     -moz-border-radius: 0 0 23.5px 23.5px;
     -moz-background-clip: padding;
-    border-radius: 0 0 23.5px 23.5px;
+    border-radius: 0 0 0 23.5px;
     background-clip: padding-box;
     border: 0px solid #b2b2b2;
     border-top: none;
@@ -313,9 +320,6 @@ ul{
 }
 .landing__reg-container .landing_selector-option .selector-item:hover{
     background-color: #fe96fd;
-}
-.landing_selector-option::-webkit-scrollbar {
-    width: 0;
 }
 .landing__reg-container .day-birth .selector-item{
     font-size: 14px;
@@ -382,7 +386,9 @@ ul{
     font: 300 16px 'Open Sans',sans-serif;
     color: #fff;
     width: 100%;
-    margin-top: 7px 0 0 0;
+    text-transform: uppercase;
+    letter-spacing: 1.1px;
+    font-size: 14px;
     padding: 20px 5px;
     background-color: #51c60c;
     border: 0;
@@ -399,21 +405,24 @@ ul{
     cursor: pointer;
 }
 .btn-prev{
-    background-color: rgba(185,185,185,0.5);
+    background-color: rgba(185,185,185,0.3);
     font: 300 16px 'Open Sans',sans-serif;
     color: #fff;
     border: none;
     margin-top: 7px 0 0 0;
     padding: 20px 5px;
     border-radius: 5px;
+    text-transform: uppercase;
+    letter-spacing: 1.1px;
     cursor: pointer;
+    font-size: 14px;
 }
 .btn-next.rigth-btn{
-    width: 45%;
+    width: 48%;
     float: right;
 }
 .btn-prev.left-btn{
-    width: 45%;
+    width: 48%;
     float: left;
 }
 .landing__error{
@@ -421,14 +430,13 @@ ul{
     width: 100%;
     background-color: rgba(255,0,0,0.6);
     position: absolute;
-    top: 70px;
     text-align: center;
     padding: 5px 0;
     z-index: 5;
 }
 .landing__error:before{
     content: "";
-    background-image: url("./svg/error-symbol.svg");
+    background-image: url("img/error-symbol.svg");
     background-repeat: no-repeat;
     background-size: 15px;
     position: absolute;
@@ -444,6 +452,9 @@ ul{
     font-weight: 400;
     line-height: 44.5px;
     letter-spacing: 0.05px;
+}
+.landing__error .landing__error-text.hide-error{
+    display: none;
 }
 .landing__error.show{
     display: block;
@@ -478,4 +489,314 @@ ul{
 .landing__reg-container .landing__reg__select.day-birth,.month-birth,.year-birth{
     width: 32%;
     display: inline-block;
+}
+.landing__reg-container .landing__reg__select.growth,.constitution,.eye-color,.hair-color{
+    width: 49%;
+    display: inline-block;
+}
+.landing__reg-container.middle-container{
+    display: block;
+    height: 441px;
+    width: 441px;
+    border-radius: 50%;
+    margin-top: -220.5px;
+    margin-left: -220.5px;
+}
+.landing__reg-container.middle-container .landing__reg__select {
+    margin-bottom: 13px;
+}
+.landing__reg-container .landing__reg__step .form-input{
+    width: 100%;
+    height: 37px;
+    padding: 0 15px;
+    border: 0px solid #b2b2b2;
+    margin: 0 0 15px;
+    background-color: #ffffff;
+    text-overflow: ellipsis;
+    overflow: hidden;
+    font: 300 13px 'Open Sans',sans-serif;
+    color: #5c5c5c;
+    outline: none;
+    border-radius: 23.5px;
+    background-clip: padding-box;
+}
+.landing__reg-container .landing__reg__step .form-input.form-name{
+    margin: 40px 0;
+    font: 300 13px 'Open Sans',sans-serif;
+}
+.landing__reg-container.big-container{
+    display: block;
+    height: 496px;
+    width: 496px;
+    border-radius: 50%;
+    margin-top: -238px;
+    margin-left: -258px;
+}
+.landing__reg-container .landing__agree{
+    font: 300 13px 'Open Sans',sans-serif;
+    color: #ffffff;
+    text-align: center;
+    margin-top: 5px;
+    margin-bottom: 20px;
+    line-height: 15px;
+}
+.landing__reg-container .landing__form-item{
+    position: relative;
+    width: 90%;
+}
+.landing__reg-container .item-details{
+    width: 100%;
+    height: 18px;
+    display: block;
+    font: 300 13px 'Open Sans',sans-serif;
+    color: #ffffff;
+    padding: 0 15px 0 15px;
+    margin: 0 0 2px;
+    text-align: left;
+    overflow: hidden;
+    word-break: break-all;
+}
+.landing__reg-container .landing__form-item .eye-img{
+    display: none;
+    position: absolute;
+    top: 50%;
+    margin-top: -13px;
+    right: -15px;
+}
+.landing__reg-container .landing__form-item .eye-img.active{
+    display: block;
+}
+.landing__selector-selected.error-state:before{
+    content: "";
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    background-color: #f22;
+    right: -1px;
+    top: -1px;
+    -webkit-border-radius: 23.5px;
+    -webkit-background-clip: padding-box;
+    -moz-border-radius: 23.5px;
+    -moz-background-clip: padding;
+    border-radius: 23.5px;
+    background-clip: padding-box;
+    z-index: 4;
+    -webkit-transition: background-color 0.3s linear;
+    transition: background-color 0.3s linear;
+}
+.landing__selector-selected.error-state:after{
+    content: "";
+    position: absolute;
+    border: none;
+    width: 13px;
+    height: 13px;
+    transform: scale(1.5);
+    background: url('img/cross.svg') 0 0 no-repeat;
+    background-size: contain;
+    top: 12px;
+    right: 12px;
+    z-index: 4;
+    font: 300 19px Verdana, Geneva, sans-serif;
+    -webkit-transition: color 0.3s linear;
+    transition: color 0.3s linear;
+}
+.landing__selector-selected.error-state:hover:after{
+    content: '';
+    width: 0;
+    height: 0;
+    background: none;
+    position: absolute;
+    right: 12px;
+    top: 13px;
+    transform: scale(1);
+    border-top: 12px solid #ffffff;
+    border-left: 6.9999996px solid transparent;
+    border-right: 6.9999996px solid transparent;
+    z-index: 3000;
+}
+.landing__form-item.error-state:before{
+    content: "";
+    position: absolute;
+    width: 40px;
+    height: 40px;
+    background-color: #f22;
+    right: -31px;
+    top: 19px;
+    -webkit-border-radius: 23.5px;
+    -webkit-background-clip: padding-box;
+    -moz-border-radius: 23.5px;
+    -moz-background-clip: padding;
+    border-radius: 23.5px;
+    background-clip: padding-box;
+    z-index: 4;
+    -webkit-transition: background-color 0.3s linear;
+    transition: background-color 0.3s linear;
+}
+.landing__form-item.error-state:after {
+    content: "";
+    position: absolute;
+    border: none;
+    width: 13px;
+    height: 13px;
+    transform: scale(1.5);
+    background: url('img/cross.svg') 0 0 no-repeat;
+    background-size: contain;
+    top: 32px;
+    right: -19px;
+    z-index: 4;
+    font: 300 19px Verdana, Geneva, sans-serif;
+    -webkit-transition: color 0.3s linear;
+    transition: color 0.3s linear;
+}
+.landing__form-item.name.error-state:before{
+    right: -31px;
+    top: 38px;
+}
+.landing__form-item.name.error-state:after{
+    right: -19px;
+    top: 52px;
+}
+.landing__form-item.error-state .eye-img{
+    right: 15px;
+}
+.landing__reg-form .landing__step__subtex{
+    font-family: Lora;
+    font-size: 14px;
+    font-weight: 400;
+    line-height: 25px;
+    letter-spacing: 0.09px;
+}
+.landing__reg-form .paragraph{
+    font-family: "Open Sans";
+    font-size: 13px;
+    line-height: 18px;
+    letter-spacing: 0.02px;
+    font-weight: 300;
+    margin: 7px 0;
+}
+.landing__reg-form .landing__step__wish{
+    color: #ffffff;
+    font-family: Lora;
+    font-size: 11px;
+    margin-bottom: 10px;
+    font-weight: 700;
+    line-height: 25px;
+    text-transform: uppercase;
+    letter-spacing: 0.42px;
+}
+.footer__list{
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+    height: 140px;
+    background-color: #dadada;
+}
+.footer__list .footer-item{
+    font-family: "Open Sans";
+    margin: 10px 0;
+    font-size: 13px;
+    font-weight: 700;
+    text-transform: uppercase;
+    letter-spacing: 0.2px;
+}
+.footer__list .footer-item .footer-item-link{
+    color: #858585;
+}
+@media screen and (max-width: 1280px){
+    .landing__header .landing__header__text {
+        font-size: 15px;
+    }
+    .landing__header .landing__header__sign-in {
+        padding: 0px 22px;
+        border-radius: 6px;
+        font-size: 12px;
+        margin-left: 6px;
+    }
+    .landing__bottom .landing__bottom-text{
+        font-size: 20px;
+    }
+}
+@media screen and (max-width: 930px){
+    .landing__header .landing__header__text {
+        text-align: center;
+    }
+    .footer__list{
+        height: auto;
+        flex-direction: column;
+        text-align: center;
+    }
+}
+@media screen and (max-width: 660px){
+    .landing__inner .landing__header {
+        flex-direction: column;
+        height: auto;
+    }
+    .landing__header .landing__header__item {
+        width: auto;
+        padding: 0;
+        margin: 5px 0;
+    }
+    .landing__bottom{
+        display: none;
+    }
+    .landing__reg-container{
+        width: 100%;
+        height: 280px;
+        background-color: #000;
+        background-color: rgba(0,0,0,0.5);
+        bottom: 0%;
+        border-radius: 0;
+        top: auto;
+        left: auto;
+        margin: 0;
+        padding: 0;
+        z-index: 4;
+        -webkit-transition: background-color 0.8s ease-in-out;
+        transition: background-color 0.8s ease-in-out;
+        -webkit-transform-origin: center center;
+        transform-origin: center center;
+    }
+    .landing__reg-container .landing__reg-form {
+        width: 350px;
+    }
+    .landing__reg-container.middle-container{
+        width: 100%;
+        height: 336px;
+        border-radius: 0;
+        margin: 0;
+    }
+    .landing__reg-container.big-container{
+        width: 100%;
+        height: 380px;
+        border-radius: 0;
+        margin: 0;
+    }
+    .landing__header .landing__header__sign-in{
+        position: absolute;
+        top: 9px;
+        right: 0;
+        height: 40px;
+        border: 0;
+    }
+    .second__list-item{
+        width: 155px;
+        height: 155px;
+    }
+    .landing__error{
+        top: auto;
+    }
+    .landing__error .landing__error-text{
+        font-size: 18px;
+    }
+    .landing__reg-container .landing__reg-form .progress-bar {
+        margin-top: 10px;
+    }
+}
+@media screen and (max-width: 400px){
+    .landing__reg-container .landing__reg-form{
+        width: 280px;
+    }
+    .landing__error .landing__error-text {
+        font-size: 13px;
+    }
 }
